--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
   <meta name="description" content="">
-  
+  <title>Basketball System</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&amp;subset=latin">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header4-1" data-bg-video="https://www.youtube.com/embed/rifmq9xga_Q?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
+<section class="engine"><a rel="external" href="https://mobirise.com">Website Maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header4-1" data-bg-video="https://www.youtube.com/embed/rifmq9xga_Q?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(193, 193, 193);"></div>
 
@@ -227,7 +227,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="6Hqw8t81CLlpad71ZaCrtYtDlNyR/dCGcIrV4GAojDotA27VQ6MFt/YID0jebMlaYTDSp4+FqcaeM7HyK0oCtaajeHZsS5Z+4ni5iGqrXuHYmTvI6PcXdKPj7iSrnQPI" data-form-email="true">
+                        <input type="hidden" value="y6AX96UC8f/pq6KAXMFpKM1qgJQSSvusgBTXZXKVL4FLrGc6nvMqPLaLfCauMOvvQ2L0AtzIoIV+zhkPmro0Wiu5KnGq3WvtRU+lFXC4CBCHvBYZ/0eKbSLzMq/lxkDA" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
