--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="true">FUNCTIONS</a><div class="dropdown-menu"><a class="dropdown-item" href="index.html#msg-box5-t" aria-expanded="false">ADD TEAM</a><a class="dropdown-item" href="index.html#msg-box5-u">GAME RECORDING</a><a class="dropdown-item" href="index.html#msg-box5-v">DATA ANALYSIS</a><a class="dropdown-item" href="index.html#msg-box2-l">戰術動畫繪製</a></div></li><li class="nav-item"><a class="nav-link link" href="index.html#msg-box2-o">FEATURES</a></li><li class="nav-item"><a class="nav-link link" href="index.html#form1-c">CONTACT</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="https://mobirise.com/">DOWNLOAD</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="false">FUNCTIONS</a><div class="dropdown-menu"><a class="dropdown-item" href="index.html#msg-box5-t" aria-expanded="false">ADD TEAM</a><a class="dropdown-item" href="index.html#msg-box5-u">GAME RECORDING</a><a class="dropdown-item" href="index.html#msg-box5-v">DATA ANALYSIS</a><a class="dropdown-item" href="index.html#msg-box2-l">戰術動畫繪製</a></div></li><li class="nav-item"><a class="nav-link link" href="index.html#msg-box2-o">FEATURES</a></li><li class="nav-item"><a class="nav-link link" href="index.html#form1-c">CONTACT</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header4-1" style="background-image: url(assets/images/mbr-2000x1324.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header4-1" style="background-image: url(assets/images/mbr-2000x1324.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(193, 193, 193);"></div>
 
@@ -281,7 +281,7 @@
         <div>
             <div>
                 <ol class="carousel-indicators">
-                    <li data-app-prevent-settings="" data-target="#slider-i" data-slide-to="0" class="active"></li><li data-app-prevent-settings="" data-target="#slider-i" class="" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#slider-i" data-slide-to="2"></li><li data-app-prevent-settings="" data-target="#slider-i" data-slide-to="3"></li><li data-app-prevent-settings="" data-target="#slider-i" data-slide-to="4"></li><li data-app-prevent-settings="" data-target="#slider-i" data-slide-to="5"></li>
+                    <li data-app-prevent-settings="" data-target="#slider-i" data-slide-to="0" class="active"></li><li data-app-prevent-settings="" data-target="#slider-i" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#slider-i" data-slide-to="2"></li><li data-app-prevent-settings="" data-target="#slider-i" data-slide-to="3"></li><li data-app-prevent-settings="" data-target="#slider-i" data-slide-to="4"></li><li data-app-prevent-settings="" data-target="#slider-i" class="" data-slide-to="5"></li>
                 </ol>
                 <div class="carousel-inner" role="listbox">
                     <div class="mbr-section mbr-section-hero carousel-item dark center active" data-bg-video-slide="false">
@@ -487,7 +487,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="YQybMms2mu3vOQ4wXyXQXZk8VL3VLs/kOFdZNkdikebcbdZMm+oCBvLqa72AUocu2ui4LyCZS2e10U4JRQgcG6RuWb47r/+Mesjf828DxlRWDEwa7m9y58Jl0bxmQDaF" data-form-email="true">
+                        <input type="hidden" value="KgCEScn5kA0cZHy5sDyl9X0Bd6Y1r8LjFuRg5HihtWT8go4LTt/e0QoLhrEp1Ph8BeH9DmJFb6xT6Q+G4WRF2dAwluSA1uFHZa78gjHnMF4tDI/MKy7wkUM8TWQaQDLb" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
