--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header4-1" style="background-image: url(assets/images/mbr-2000x1324.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header4-1" style="background-image: url(assets/images/mbr-2000x1324.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(193, 193, 193);"></div>
 
@@ -82,7 +82,7 @@
 
 </section>
 
-<section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="4000" id="slider-11">
+<section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider-11">
     <div>
         <div>
             <div>
@@ -541,7 +541,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="H1h4wmQQlFrgpVLtPGBPUzmoZZgWd4M9PqjnzKwSYPwqsoJ/PeRZvkPCUbDp3G3fPOUn7Qtj+XiB1bFaQcApPMlUy77tYTavA1gCq2ME+1ccA09NrFWWtYf/uyA7GUHW" data-form-email="true">
+                        <input type="hidden" value="RkZjuMEW4scDX6tSITzWPETm3+Ac3QfYcwA9YA8t9s1rMVpUwyWyW5QdlTHfTMPz62EJkWccAkQt3jCsc9z8ah8MPXsUzRvG1a/btpZzJH5IGrJT13R1g2Fhnt6OF7qc" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
