--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header4-1" style="background-image: url(assets/images/mbr-2000x1324.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header4-1" style="background-image: url(assets/images/mbr-2000x1324.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(193, 193, 193);"></div>
 
@@ -82,12 +82,12 @@
 
 </section>
 
-<section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider-11">
+<section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="7000" id="slider-11">
     <div>
         <div>
             <div>
                 <ol class="carousel-indicators">
-                    <li data-app-prevent-settings="" data-target="#slider-11" class="active" data-slide-to="0"></li><li data-app-prevent-settings="" data-target="#slider-11" data-slide-to="1"></li>
+                    <li data-app-prevent-settings="" data-target="#slider-11" data-slide-to="0" class="active"></li><li data-app-prevent-settings="" data-target="#slider-11" class="" data-slide-to="1"></li>
                 </ol>
                 <div class="carousel-inner" role="listbox">
                     <div class="mbr-section mbr-section-hero carousel-item dark center mbr-section-full active" data-bg-video-slide="false" style="background-image: url(assets/images/mbr-6-2000x1333.jpg);">
@@ -541,7 +541,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="RkZjuMEW4scDX6tSITzWPETm3+Ac3QfYcwA9YA8t9s1rMVpUwyWyW5QdlTHfTMPz62EJkWccAkQt3jCsc9z8ah8MPXsUzRvG1a/btpZzJH5IGrJT13R1g2Fhnt6OF7qc" data-form-email="true">
+                        <input type="hidden" value="pGX9PdSLIStN57Pr9Qz8lKzKWMa0mWyz4VK7xhdaj9KPDG7SEksGlVNC6WMZtpC0tceMgm54mejKA4nvo/Mm464oLAjt+u6HIgk+yPpFaFAP4IF1FXMr6rHBI48jK4KH" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
