--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header4-1" style="background-image: url(assets/images/mbr-2000x1324.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header4-1" style="background-image: url(assets/images/mbr-2000x1324.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(193, 193, 193);"></div>
 
@@ -82,7 +82,7 @@
 
 </section>
 
-<section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="7000" id="slider-11">
+<section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="10000" id="slider-11">
     <div>
         <div>
             <div>
@@ -541,7 +541,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="pGX9PdSLIStN57Pr9Qz8lKzKWMa0mWyz4VK7xhdaj9KPDG7SEksGlVNC6WMZtpC0tceMgm54mejKA4nvo/Mm464oLAjt+u6HIgk+yPpFaFAP4IF1FXMr6rHBI48jK4KH" data-form-email="true">
+                        <input type="hidden" value="D0mcVQW2r1mjOzsSNmK8ojwfbra9a2AcT5qgylGSMv2J2uNGmV0lrDcef9Ez0PsmcrQYA5a3CeSvaXb4EbMYEh02d+9JOlGgmtmvrUjHMcmjO1GegZo3N7N3r3O58qr9" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
