--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="false">FUNCTIONS</a><div class="dropdown-menu"><a class="dropdown-item" href="index.html#msg-box5-t" aria-expanded="false">ADD TEAM</a><a class="dropdown-item" href="index.html#msg-box5-u">GAME RECORDING</a><a class="dropdown-item" href="index.html#msg-box5-v">DATA ANALYSIS</a><a class="dropdown-item" href="index.html#msg-box2-l">戰術動畫繪製</a></div></li><li class="nav-item"><a class="nav-link link" href="index.html#msg-box2-o">FEATURES</a></li><li class="nav-item"><a class="nav-link link" href="index.html#form1-c">CONTACT</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="false">FUNCTIONS</a><div class="dropdown-menu"><a class="dropdown-item" href="index.html#msg-box5-t" aria-expanded="false">ADD TEAM</a><a class="dropdown-item" href="index.html#msg-box5-u">GAME RECORDING</a><a class="dropdown-item" href="index.html#msg-box5-v">DATA ANALYSIS</a><a class="dropdown-item" href="index.html#msg-box2-l">戰術動畫繪製</a></div></li><li class="nav-item"><a class="nav-link link" href="index.html#features6-n">FEATURES</a></li><li class="nav-item"><a class="nav-link link" href="index.html#header3-16">MEMBER</a></li><li class="nav-item"><a class="nav-link link" href="index.html#form1-c">CONTACT</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header4-1" style="background-image: url(assets/images/mbr-2000x1324.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header4-1" style="background-image: url(assets/images/mbr-2000x1324.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(193, 193, 193);"></div>
 
@@ -632,7 +632,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="Rwr/Hj6AYN5bZ8ysRHskrI/Q+ogGVjt8gv5dOuPrPoj/nhWTZoHamwBElkc3iBa7mswpVFtbs+gDnKrrlVJe8XcBM2nn87KMtI+lPAwmJ9/UULr9Pnr24ABugmRAFTkb" data-form-email="true">
+                        <input type="hidden" value="A8lV0bLuaGlEbueuEGo6fIg8V1uXvEB6VBICrbsnO6ewRdchayNmp6946qTV5UErlMWTNMq4da7Vo3195TfguBrqiFNRMJk1muuJT3m8asjxZc6Pe/6i+Ry4ULpWgKXt" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
