--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header4-1" style="background-image: url(assets/images/mbr-2000x1324.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header4-1" style="background-image: url(assets/images/mbr-2000x1324.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(193, 193, 193);"></div>
 
@@ -203,7 +203,7 @@
             <div class="mbr-table-md-up">
                 <div class="mbr-table-cell mbr-right-padding-md-up col-md-8 text-xs-center text-md-left">
                     
-                    <h3 class="mbr-info-title mbr-section-title display-2">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; FUNCTIONS</h3>
+                    <h3 class="mbr-info-title mbr-section-title display-2">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;FUNCTIONS</h3>
                 </div>
 
                 <div class="mbr-table-cell col-md-4">
@@ -632,7 +632,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="A8lV0bLuaGlEbueuEGo6fIg8V1uXvEB6VBICrbsnO6ewRdchayNmp6946qTV5UErlMWTNMq4da7Vo3195TfguBrqiFNRMJk1muuJT3m8asjxZc6Pe/6i+Ry4ULpWgKXt" data-form-email="true">
+                        <input type="hidden" value="iNxOf1sk7XfrMbkVY4zosS0xFa/3HzVtbBAc52QYk18Zlac1GOJy03KqEaVGtppEnO6zwVOJMITcHjdETgnvwOtYpPC4rRoO+IoSNLLN68tZxxsMQ0BmFMwRPQid4vOe" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
