--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header4-1" style="background-image: url(assets/images/mbr-2000x1324.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header4-1" style="background-image: url(assets/images/mbr-2000x1324.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(193, 193, 193);"></div>
 
@@ -82,12 +82,12 @@
 
 </section>
 
-<section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="10000" id="slider-11">
+<section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="false" id="slider-11">
     <div>
         <div>
             <div>
                 <ol class="carousel-indicators">
-                    <li data-app-prevent-settings="" data-target="#slider-11" data-slide-to="0" class="active"></li><li data-app-prevent-settings="" data-target="#slider-11" class="" data-slide-to="1"></li>
+                    <li data-app-prevent-settings="" data-target="#slider-11" class="active" data-slide-to="0"></li><li data-app-prevent-settings="" data-target="#slider-11" data-slide-to="1"></li>
                 </ol>
                 <div class="carousel-inner" role="listbox">
                     <div class="mbr-section mbr-section-hero carousel-item dark center mbr-section-full active" data-bg-video-slide="false" style="background-image: url(assets/images/mbr-6-2000x1333.jpg);">
@@ -406,7 +406,7 @@
     </div>
 </section>
 
-<section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider-i" style="background-color: rgb(163, 143, 132);">
+<section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="false" id="slider-i" style="background-color: rgb(163, 143, 132);">
     <div class=" container boxed-slider" style="padding-top: 0px; padding-bottom: 0px;">
         <div>
             <div>
@@ -628,7 +628,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="Sa0KGhKG4b6kXEUyMEylB2lbooXYHFQkN9QtVtqTpdGaaPMJ/fcRfUmr8mVhssQronLR6yZHnpikQAvJ0T+SSe4BEo/pONKrCZpcLyeTxduhTRsGR4E7eRVtqQtWu5Mk" data-form-email="true">
+                        <input type="hidden" value="Q5rXPdUgis/KKRr2Tt/EIdNx5kZj0Y4Po+9fbyY8bLRz1bMCP99HfeTuhyJ9QZy58yVkiXljC+T7J+ikPc6+P3r1nM6rxQ6YZqPgV+vGCsVJbuWCughnjiPAMbu/1H+t" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
